external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_bool.ide.exp
note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/missing_match_bool.move:1:1
   │  
 1 │ ╭ module 0x42::m {
 2 │ │     public fun t0(): u64 {
 3 │ │         match (true) {
 4 │ │             true => 0
   · │
11 │ │     }
12 │ │ }
   │ ╰─^ Possible in-scope names: 'Option -> std::option::Option', 'Self -> 0x42::m', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:3:16
  │
3 │         match (true) {
  │                ^^^^ Pattern 'false' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:3:22
  │  
3 │           match (true) {
  │ ╭──────────────────────^
4 │ │             true => 0
5 │ │         }
  │ ╰─────────^ Missing arms: 'false'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_bool.move:9:16
  │
9 │         match (true) {
  │                ^^^^ Pattern '_' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_bool.move:9:22
   │  
 9 │           match (true) {
   │ ╭──────────────────────^
10 │ │         }
   │ ╰─────────^ Missing arms: 'false' and 'true'

